--- a/APIDemo/APIDemo/MainPage.xaml
+++ b/APIDemo/APIDemo/MainPage.xaml
@@ -4,7 +4,7 @@
              x:Class="APIDemo.MainPage">
 
     <StackLayout Padding="12,0,12,12" Spacing="6">
-        <Button Text="Lamado API" Clicked="Button_Clicked"/>
+        <Button Text="Llamado API" Clicked="Button_Clicked"/>
         <ListView x:Name="ListDemo">
             <ListView.ItemTemplate>
                 <DataTemplate>
